--- a/webshop_01/templates/pages/shop-single.html
+++ b/webshop_01/templates/pages/shop-single.html
@@ -145,54 +145,61 @@
                             <ul class="list-unstyled pb-3">
                                 {{ product.specification|safe }}
                             </ul>
+                            {% if sizes %}
+                                <form action="" method="GET">
+                                    <input type="hidden" name="product-title" value="Activewear">
+                                    <div class="row">
+                                        <div class="col-auto">
 
-                            <form action="" method="GET">
-                                <input type="hidden" name="product-title" value="Activewear">
-                                <div class="row">
-                                    <div class="col-auto">
-                                        <ul class="list-inline pb-3">
-                                            <li class="list-inline-item">Size :
-                                                <input type="hidden" name="product-size" id="product-size" value="S">
-                                            </li>
-                                            <li class="list-inline-item"><span class="btn btn-success btn-size">S</span>
-                                            </li>
-                                            <li class="list-inline-item"><span class="btn btn-success btn-size">M</span>
-                                            </li>
-                                            <li class="list-inline-item"><span class="btn btn-success btn-size">L</span>
-                                            </li>
-                                            <li class="list-inline-item"><span
-                                                    class="btn btn-success btn-size">XL</span></li>
-                                        </ul>
+                                            <ul class="list-inline pb-3">
+                                                <li class="list-inline-item">Size :
+                                                    <input type="hidden" name="product-size" id="product-size"
+                                                           value="S">
+                                                </li>
+                                                {% for size in sizes %}
+                                                    <li class="list-inline-item"><span
+                                                            class="btn btn-success btn-size">{{ size.size }}</span>
+                                                    </li>
+                                                {% endfor %}
+
+                                            </ul>
+
+                                        </div>
+                                        <div class="col-auto">
+                                            <ul class="list-inline pb-3">
+                                                <li class="list-inline-item text-right">
+                                                    Quantity
+                                                    <input type="hidden" name="product-quanity" id="product-quanity"
+                                                           value="1">
+                                                </li>
+                                                <li class="list-inline-item"><span class="btn btn-success"
+                                                                                   id="btn-minus">-</span></li>
+                                                <li class="list-inline-item"><span class="badge bg-secondary"
+                                                                                   id="var-value">1</span></li>
+                                                <li class="list-inline-item"><span class="btn btn-success"
+                                                                                   id="btn-plus">+</span></li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                    <div class="col-auto">
-                                        <ul class="list-inline pb-3">
-                                            <li class="list-inline-item text-right">
-                                                Quantity
-                                                <input type="hidden" name="product-quanity" id="product-quanity"
-                                                       value="1">
-                                            </li>
-                                            <li class="list-inline-item"><span class="btn btn-success"
-                                                                               id="btn-minus">-</span></li>
-                                            <li class="list-inline-item"><span class="badge bg-secondary"
-                                                                               id="var-value">1</span></li>
-                                            <li class="list-inline-item"><span class="btn btn-success"
-                                                                               id="btn-plus">+</span></li>
-                                        </ul>
+                                    <div class="row pb-3">
+                                        <div class="col d-grid">
+                                            <button type="submit" class="btn btn-success btn-lg" name="submit"
+                                                    value="buy">
+                                                Buy
+                                            </button>
+                                        </div>
+                                        <div class="col d-grid">
+                                            <button id="cart" data-product-slug="{{ product.slug }}"
+                                                    class="btn btn-success btn-lg">Add To Cart
+                                            </button>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="row pb-3">
-                                    <div class="col d-grid">
-                                        <button type="submit" class="btn btn-success btn-lg" name="submit" value="buy">
-                                            Buy
-                                        </button>
-                                    </div>
-                                    <div class="col d-grid">
-                                        <button id="cart" data-product-slug="{{ product.slug }}"
-                                                class="btn btn-success btn-lg">Add To Cart
-                                        </button>
-                                    </div>
-                                </div>
-                            </form>
+                                </form>
+                            {% else %}
+                                <li class="list-inline-item"><span class="btn btn-danger btn-size">{{ size.size }}Out
+                                of Stock
+                            {% endif %}
+
 
                         </div>
                     </div>
@@ -216,7 +223,8 @@
                     <div class="p-2 pb-3">
                         <div class="product-wap card rounded-0">
                             <div class="card rounded-0">
-                                <img class="card-img rounded-0 img-fluid" style="width: 400px; height: 200px" src="{{ related.cover_image.url }}">
+                                <img class="card-img rounded-0 img-fluid" style="width: 400px; height: 200px"
+                                     src="{{ related.cover_image.url }}">
                                 <div class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
                                     <ul class="list-unstyled">
                                         <li><a class="btn btn-success text-white" href="shop-single.html"><i
