--- a/webshop_01/templates/base/base.html
+++ b/webshop_01/templates/base/base.html
@@ -16,50 +16,86 @@
     <link rel="stylesheet" href="{% get_static_prefix %}css/custom.css">
 
     <!-- Load fonts style after rendering the layout styles -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
     <link rel="stylesheet" href="{% get_static_prefix %}css/fontawesome.min.css">
 
     <!--Map Script-->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+          integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+          crossorigin=""/>
 
     <!-- Slick -->
     <link rel="stylesheet" type="text/css" href="{% get_static_prefix %}css/slick.min.css">
     <link rel="stylesheet" type="text/css" href="{% get_static_prefix %}css/slick-theme.css">
+
+    <!-- Jquery Autocomplete -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
+
     {% block style_css %}
 
     {% endblock %}
 
-<!--
+    <!--
 
-TemplateMo 559 Zay Shop
+    TemplateMo 559 Zay Shop
 
-https://templatemo.com/tm-559-zay-shop
+    https://templatemo.com/tm-559-zay-shop
 
--->
+    -->
 </head>
 <body>
-    {% include 'base/navigation.html' %}
 
-    {% block body_content %}
+{% include 'base/navigation.html' %}
+<!-- Modal -->
+<div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     >
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="w-100 pt-1 mb-5 text-right">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form action="{% url 'search_view' %}" method="get" class="modal-content modal-body border-0 p-0"
+              autocomplete="on">
+            <div class="input-group mb-2">
+                <input type="text" class="form-control" id="inputModalSearch" name="search" placeholder="Search ...">
+                <button type="submit" class="input-group-text bg-success text-light">
+                    <i class="fa fa-fw fa-search text-white"></i>
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
+<!-- End Modal -->
+{% block body_content %}
 
-    {% endblock %}
+{% endblock %}
 
-    <!-- Start Footer -->
-    <footer class="bg-dark" id="tempaltemo_footer">
-        {% include 'base/footer.html'%}
-    </footer>
-    <!-- End Footer -->
+<!-- Start Footer -->
+<footer class="bg-dark" id="tempaltemo_footer">
+    {% include 'base/footer.html' %}
+</footer>
+<!-- End Footer -->
 
-    <!-- Start Script -->
-    <script src="{% get_static_prefix %}js/jquery-1.11.0.min.js"></script>
-    <script src="{% get_static_prefix %}js/jquery-migrate-1.2.1.min.js"></script>
-    <script src="{% get_static_prefix %}js/bootstrap.bundle.min.js"></script>
-    <script src="{% get_static_prefix %}js/templatemo.js"></script>
-    <script src="{% get_static_prefix %}js/custom.js"></script>
-    <!-- End Script -->
+<!-- Start Script -->
+<script src="{% get_static_prefix %}js/jquery-1.11.0.min.js"></script>
+<script src="{% get_static_prefix %}js/jquery-migrate-1.2.1.min.js"></script>
+<script src="{% get_static_prefix %}js/bootstrap.bundle.min.js"></script>
+<script src="{% get_static_prefix %}js/templatemo.js"></script>
+<script src="{% get_static_prefix %}js/custom.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+<script>
+    $(function () {
+        $("#inputModalSearch").autocomplete({
+            source: '{% url 'autocomplete' %}',
+            appendTo: $("#templatemo_search")
+        });
+    });
+</script>
+<!-- End Script -->
 
-    {% block additional_script %}
-    {% endblock %}
+{% block additional_script %}
+{% endblock %}
 </body>
 
 </html>
