--- a/webshop_01/templates/base/navigation.html
+++ b/webshop_01/templates/base/navigation.html
@@ -58,18 +58,20 @@
                         {% endif %}
 
                     {% endfor %}
-
-                    {#                    <li class="nav-item">#}
-                    {#                        <a class="nav-link" href="about.html">About</a>#}
-                    {#                    </li>#}
-                    {#                    <li class="nav-item">#}
-                    {#                        <a class="nav-link" href="{% url 'shop' %}">Shop</a>#}
-                    {#                    </li>#}
-                    {#                    <li class="nav-item">#}
-                    {#                        <a class="nav-link" href="contact.html">Contact</a>#}
-                    {#                    </li>#}
                 </ul>
             </div>
+{#            <div class="navbar align-self-center d-flex">#}
+{#                <form action="{% url 'search_view' %}" method="get" class="modal-content modal-body border-0 p-0"#}
+{#                      autocomplete="on">#}
+{#                    <div class="input-group mb-2">#}
+{#                        <input type="text" class="form-control" id="inputModalSearch" name="search"#}
+{#                               placeholder="Search ...">#}
+{#                        <button type="submit" class="input-group-text bg-success text-light">#}
+{#                            <i class="fa fa-fw fa-search text-white"></i>#}
+{#                        </button>#}
+{#                    </div>#}
+{#                </form>#}
+{#            </div>#}
             <div class="navbar align-self-center d-flex">
                 <div class="d-lg-none flex-sm-fill mt-3 mb-4 col-7 col-sm-auto pr-3">
                     <div class="input-group">
@@ -105,24 +107,6 @@
     </div>
 </nav>
 
-<!-- Modal -->
-<div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="w-100 pt-1 mb-5 text-right">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <form action="{% url 'search_view' %}" method="get" class="modal-content modal-body border-0 p-0">
-            <div class="input-group mb-2">
-                <input type="text" class="form-control" id="inputModalSearch" name="search" placeholder="Search ...">
-                <button type="submit" class="input-group-text bg-success text-light">
-                    <i class="fa fa-fw fa-search text-white"></i>
-                </button>
-            </div>
-        </form>
-    </div>
-</div>
-<!-- End Modal -->
 
 <script src="{% get_static_prefix %}js/cart/clear_cart.js"></script>
 <script src="{% get_static_prefix %}js/favourites/favourites_count.js"></script>
