--- a/webshop_01/templates/pages/favourites.html
+++ b/webshop_01/templates/pages/favourites.html
@@ -29,7 +29,7 @@
             <div class="col-lg-9">
                 <div class="row">
                     {% for product in fav_products %}
-                        <div id="{{ product.slug}}" class="col-md-4" style="margin-left: 500px">
+                        <div id="{{ product.slug }}" class="col-md-4" style="margin-left: 500px">
                             <div class="card mb-4 product-wap rounded-0">
                                 <div class="card rounded-0">
                                     <img class="card-img rounded-0 img-fluid" style="width: 400px; height: 200px"
@@ -74,24 +74,28 @@
                         </div>
                     {% endfor %}
                 </div>
-                <div class="row mt-4" style="margin-right: 210px">
-                    <ul class="pagination pagination-lg justify-content-end">
-                        <li class="page-item disabled">
-                            <a class="page-link active rounded-0 mr-3 shadow-sm border-top-0 border-left-0" href="#"
-                               tabindex="-1">1</a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link rounded-0 mr-3 shadow-sm border-top-0 border-left-0 text-dark" href="#">2</a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link rounded-0 shadow-sm border-top-0 border-left-0 text-dark" href="#">3</a>
-                        </li>
-                    </ul>
-                </div>
             </div>
         </div>
     </div>
+    <div div="row" style="display: flex; justify-content: center; align-items: center;">
+        <ul class="pagination pagination-lg justify-content-end">
+            {% for page_num in page_obj.paginator.page_range %}
+                {% if page_num == page_obj.number %}
+                    <li class="page-item disabled">
+                        <a class="page-link active rounded-0 mr-3 shadow-sm border-top-0 border-left-0"
+                           href="#"
+                           tabindex="-1">{{ page_num }}</a>
+                    </li>
+                {% else %}
+                    <li class="page-item">
+                        <a class="page-link rounded-0 mr-3 shadow-sm border-top-0 border-left-0 text-dark"
+                           href="?page={{ page_num }}">{{ page_num }}</a>
+                    </li>
+                {% endif %}
 
+            {% endfor %}
+        </ul>
+    </div>
 
     </div>
     </div>
