--- a/webshop_01/templates/pages/shop.html
+++ b/webshop_01/templates/pages/shop.html
@@ -56,10 +56,12 @@
                     <div class="col-md-6">
                         <ul class="list-inline shop-top-menu pb-3 pt-1">
                             <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none mr-3" href="{% url 'shop' category %}">All</a>
+                                <a class="h3 text-dark text-decoration-none mr-3"
+                                   href="{% url 'shop' category %}">All</a>
                             </li>
                             <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none mr-3" href="{% url 'shop' category 'Men' %}">Men's</a>
+                                <a class="h3 text-dark text-decoration-none mr-3"
+                                   href="{% url 'shop' category 'Men' %}">Men's</a>
                             </li>
                             <li class="list-inline-item">
                                 <a class="h3 text-dark text-decoration-none" href="{% url 'shop' category 'Women' %}">Women's</a>
@@ -75,10 +77,11 @@
                                 <div class="card rounded-0">
                                     <img class="card-img rounded-0 img-fluid" style="width: 400px; height: 200px"
                                          src="{{ product.cover_image.url }}">
-                                    <div  class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
+                                    <div class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
                                         <ul class="list-unstyled">
                                             {% if request.user.is_authenticated %}
-                                                <li><a data-product-slug="{{ product.slug }}" class="btn btn-success text-white favourites" href="#"><i
+                                                <li><a data-product-slug="{{ product.slug }}"
+                                                       class="btn btn-success text-white favourites" href="#"><i
                                                         class="far fa-heart"></i></a></li>
                                             {% endif %}
                                             <li><a class="btn btn-success text-white mt-2"
@@ -115,22 +118,26 @@
                         </div>
                     {% endfor %}
                 </div>
-                <div div="row">
+                <div div="row" style="display: flex; justify-content: center; align-items: center;">
                     <ul class="pagination pagination-lg justify-content-end">
-                        <li class="page-item disabled">
-                            <a class="page-link active rounded-0 mr-3 shadow-sm border-top-0 border-left-0" href="#"
-                               tabindex="-1">1</a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link rounded-0 mr-3 shadow-sm border-top-0 border-left-0 text-dark" href="#">2</a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link rounded-0 shadow-sm border-top-0 border-left-0 text-dark" href="#">3</a>
-                        </li>
+                        {% for page_num in page_obj.paginator.page_range %}
+                            {% if page_num == page_obj.number %}
+                                <li class="page-item disabled">
+                                    <a class="page-link active rounded-0 mr-3 shadow-sm border-top-0 border-left-0"
+                                       href="#"
+                                       tabindex="-1">{{ page_num }}</a>
+                                </li>
+                            {% else %}
+                                <li class="page-item">
+                                    <a class="page-link rounded-0 mr-3 shadow-sm border-top-0 border-left-0 text-dark"
+                                       href="?page={{ page_num }}">{{ page_num }}</a>
+                                </li>
+                            {% endif %}
+
+                        {% endfor %}
                     </ul>
                 </div>
             </div>
-
         </div>
     </div>
     <script src="{% get_static_prefix %}js/shop_rate.js"></script>
