--- a/webshop_01/templates/pages/payment.html
+++ b/webshop_01/templates/pages/payment.html
@@ -32,30 +32,32 @@
                         <h3 class="title">Credit Card Details</h3>
                         <div class="row">
                             <div class="form-group col-sm-7">
-                                <label for="card-holder">Card Holder</label>
+                                <label for="card-holder">First Name</label>
                                 <input id="card-holder" type="text" class="form-control" placeholder="Card Holder"
                                        aria-label="Card Holder" aria-describedby="basic-addon1">
                             </div>
-                            <div class="form-group col-sm-5">
-                                <label for="">Expiration Date</label>
-                                <div class="input-group expiration-date">
-                                    <input type="text" class="form-control" placeholder="MM" aria-label="MM"
-                                           aria-describedby="basic-addon1">
-                                    <span class="date-separator">/</span>
-                                    <input type="text" class="form-control" placeholder="YY" aria-label="YY"
-                                           aria-describedby="basic-addon1">
-                                </div>
-                            </div>
+{#                            <div class="form-group col-sm-5">#}
+{#                                <label for="">Expiration Date</label>#}
+{#                                <div class="input-group expiration-date">#}
+{#                                    <input type="text" class="form-control" placeholder="MM" aria-label="MM"#}
+{#                                           aria-describedby="basic-addon1">#}
+{#                                    <span class="date-separator">/</span>#}
+{#                                    <input type="text" class="form-control" placeholder="YY" aria-label="YY"#}
+{#                                           aria-describedby="basic-addon1">#}
+{#                                </div>#}
+{#                            </div>#}
                             <div class="form-group col-sm-8">
-                                <label for="card-number">Card Number</label>
+                                <label for="card-number">Last Name</label>
                                 <input id="card-number" type="text" class="form-control" placeholder="Card Number"
                                        aria-label="Card Holder" aria-describedby="basic-addon1">
                             </div>
+
                             <div class="form-group col-sm-4">
-                                <label for="cvc">CVC</label>
-                                <input id="cvc" type="text" class="form-control" placeholder="CVC"
+                                <label for="cvc">Postcode</label>
+                                <input id="cvc" type="text" class="form-control" placeholder="Postcode"
                                        aria-label="Card Holder" aria-describedby="basic-addon1">
                             </div>
+
                             <div class="form-group col-sm-12">
                                 <button type="button" class="btn btn-primary btn-block" style="padding-inline: 230px">
                                     Proceed
