--- a/webshop_01/templates/pages/payment.html
+++ b/webshop_01/templates/pages/payment.html
@@ -13,7 +13,8 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in,
                         mattis vitae leo.</p>
                 </div>
-                <form>
+                <form method="post">
+                    {% csrf_token %}
                     <div class="products">
                         <h3 class="title">Checkout</h3>
                         {% if cart_products %}
@@ -30,40 +31,16 @@
                     </div>
                     <div class="card-details">
                         <h3 class="title">Credit Card Details</h3>
-                        <div class="row">
-                            <div class="form-group col-sm-7">
-                                <label for="card-holder">First Name</label>
-                                <input id="card-holder" type="text" class="form-control" placeholder="Card Holder"
-                                       aria-label="Card Holder" aria-describedby="basic-addon1">
-                            </div>
-{#                            <div class="form-group col-sm-5">#}
-{#                                <label for="">Expiration Date</label>#}
-{#                                <div class="input-group expiration-date">#}
-{#                                    <input type="text" class="form-control" placeholder="MM" aria-label="MM"#}
-{#                                           aria-describedby="basic-addon1">#}
-{#                                    <span class="date-separator">/</span>#}
-{#                                    <input type="text" class="form-control" placeholder="YY" aria-label="YY"#}
-{#                                           aria-describedby="basic-addon1">#}
-{#                                </div>#}
-{#                            </div>#}
-                            <div class="form-group col-sm-8">
-                                <label for="card-number">Last Name</label>
-                                <input id="card-number" type="text" class="form-control" placeholder="Card Number"
-                                       aria-label="Card Holder" aria-describedby="basic-addon1">
-                            </div>
 
-                            <div class="form-group col-sm-4">
-                                <label for="cvc">Postcode</label>
-                                <input id="cvc" type="text" class="form-control" placeholder="Postcode"
-                                       aria-label="Card Holder" aria-describedby="basic-addon1">
-                            </div>
 
-                            <div class="form-group col-sm-12">
-                                <button type="button" class="btn btn-primary btn-block" style="padding-inline: 230px">
-                                    Proceed
-                                </button>
-                            </div>
+                        {{ form }}
+                        <div class="form-group col-sm-12">
+                            <button type="submit" class="btn btn-primary btn-block"
+                                    style="padding-inline: 230px">
+                                Proceed
+                            </button>
                         </div>
+
                     </div>
                 </form>
             </div>
