--- a/webshop_01/templates/pages/shop.html
+++ b/webshop_01/templates/pages/shop.html
@@ -146,7 +146,7 @@
     {% if messages %}
             {#    TODO FINISH THIS#}
             {% for message in messages %}
-                <script>accessMessage({{ message }})</script>
+                <script>accessMessage("{{ message.tags }}")</script>
             {% endfor %}
 
     {% endif %}
